# DICOMRegObject

./: CMakeLists.txt  README.md
DICOMSpatialRegistrationImport/: CMakeLists.txt  DICOMSpatialRegistrationImportPlugin.py  qSlicerDICOMSpatialRegistrationImportModule.cxx  qSlicerDICOMSpatialRegistrationImportModule.h  qSlicerDICOMSpatialRegistrationImportModuleWidget.cxx  qSlicerDICOMSpatialRegistrationImportModuleWidget.h
DICOMSpatialRegistrationImport/Logic/: CMakeLists.txt  vtkDICOMImportInfo.cxx  vtkDICOMImportInfo.h  vtkSlicerDICOMSpatialRegistrationImportModuleLogic.cxx  vtkSlicerDICOMSpatialRegistrationImportModuleLogic.h  vtkSlicerDICOMSpatialRegistrationReader.cxx  vtkSlicerDICOMSpatialRegistrationReader.h
DICOMSpatialRegistrationImport/Resources/: qSlicerDICOMSpatialRegistrationImportModule.qrc
DICOMSpatialRegistrationImport/Resources/UI/: qSlicerDICOMSpatialRegistrationImportModule.ui
